--- a/sample-me_n-app/package.json
+++ b/sample-me_n-app/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.18.2",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "mongoose-paginate-v2": "^1.8.0"
   }
 }
