--- a/.gitignore
+++ b/.gitignore
@@ -73,8 +73,11 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
-.env
-.env.development.local
+# One or more of the following are just samples;
+# we will include them for reference
+#.env
+#.env.sample
+#.env.development.local
 .env.test.local
 .env.production.local
 .env.local
