--- a/sample-me_n-app/.env.sample
+++ b/sample-me_n-app/.env.sample
@@ -1,6 +1,6 @@
 #Example values required for this app to start
 DB_HOST=localhost
-DB_USER=root
+DB_USER=sampleadmin
 DB_PASSWORD=changeme
 DB_NAME=votes
 DB_PORT=27017
