--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 #This is a sample env file only. Please change values
-MONGODB_USER=root
+MONGODB_USER=sampleadmin
 MONGODB_PASSWORD=changeme
 MONGODB_LOCAL_PORT=7017
 MONGODB_DOCKER_PORT=27017
