--- a/.env
+++ b/.env
@@ -12,4 +12,8 @@ MONGODB_DATABASE=example
 NODE_LOCAL_PORT=8080
 NODE_DOCKER_PORT=8080
 
+#NodeJS timespan.js time is in milliseconds
 JWT_SECRET=example-secret-key
+JWT_EXPIRATION_TIME=60000
+JWT_REFRESH_EXPIRE_TIME=180000
+#TIME in miliseconds: 3600 *1000 = 1h, 86400 *1000 = 1d
