Dockerfile Best Practices - using sha hash for image

--- a/sample-me_n-app/Dockerfile
+++ b/sample-me_n-app/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:21
+FROM node@sha256:0ded28778059262bd3c066b609186e5b6c89550a9362dce4309ad67c95af0d77
 
 WORKDIR /sample-app
 COPY package.json .
